network/security_groups.tf
resource "aws_security_group" "public_sec" {
  name        = "allow_tls"
  description = "Allow SSH from all"
  vpc_id      = aws_vpc.my_vpc.id

  ingress = [
    {
      description      = "SSH"
      from_port        = 0
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
      prefix_list_ids = []
      security_groups = []
      self = false
    }
  ]

  egress = [
    {
      description      = "SSH"
      from_port        = 22
      to_port          = 0
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
      prefix_list_ids = []
      security_groups = []
      self = false
    }
  ]

}


resource "aws_security_group" "private_sec" {
  name        = "allow_tls"
  description = "Allow SSH from vpc cidr only"
  vpc_id      = aws_vpc.my_vpc.id

  ingress = [
    {
      description      = "SSH"
      from_port        = 3000
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = [aws_vpc.my_vpc.cidr_block]
      ipv6_cidr_blocks = []
      prefix_list_ids = []
      security_groups = []
      self = false
    }
  ]

  egress = [
    {
      description      = "SSH"
      from_port        = 22
      to_port          = 3000
      protocol         = "tcp"
      cidr_blocks      = [aws_vpc.my_vpc.cidr_block]
      ipv6_cidr_blocks = []
      prefix_list_ids = []
      security_groups = []
      self = false
      
    }
  ]

}
